ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protools-camunda
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - protools-camunda.dev.insee.io
  rules:
    - host: protools-camunda.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: protools-camunda
                port:
                  number: 8080
